Address Form Final 11

--- a/address.html
+++ b/address.html
@@ -104,6 +104,18 @@
     <section class="section2">
       <div class="Container">
         <div class="textarea grid">
+          <div id="explain" style="text-align: center;">
+            프리세일 참여자들의 혜택 중 하나인 단오풍정의 영인본을 집에서 즐겨보세요. 
+      <br><br>
+      사이트에 방문해서 지갑과 연결한 후 수령지를 작성해주시면 <br>
+      스냅샷 이후 지갑주소와 보유 nft 를 비교한 후 발송할 예정입니다.<br><br>
+      
+      스냅샷 일정 : 8월 7일 10am (UTC +9)<br>
+      수령지 작성 기한 : 8월 7일 23시 59분 (UTC +9)<br><br>
+      
+      * 스냅샷 시점 보유자 기준으로 확인되니 <br>
+      프리세일에 참여했지만 보유하고 있지않으면 영인본은 발송되지않습니다.<br><br><br>
+          </div>
           <div>
             <div class="ConnectWallet_content" style="display:block;">
               <div>
