--- a/mintingInfo.html
+++ b/mintingInfo.html
@@ -296,15 +296,15 @@
           <h3>Image Crop Types</h3>
           <ul class="grid">
             <li>
-              <img src="./img/image_crop_square.png" alt="" />
+              <img src="img\JUNE_mintingpage\image_crop_square.png" alt="" />
               <p>Square</p>
             </li>
             <li>
-              <img src="./img/image_crop_vertical.png" alt="" />
+              <img src="img\JUNE_mintingpage\image_crop_vertical.png" alt="" />
               <p>Vertical</p>
             </li>
             <li>
-              <img src="./img/image_crop_horizontal.png" alt="" />
+              <img src="img\JUNE_mintingpage\image_crop_horizontal.png" alt="" />
               <p>Horizontal</p>
             </li>
           </ul>
@@ -314,11 +314,11 @@
           <h3>Image Frames</h3>
           <ul class="grid">
             <li>
-              <img src="./img/Image_Frames_Rectangle.png" alt="" />
+              <img src="img\JUNE_mintingpage\Image_Frames_Rectangle.png" alt="" />
               <p>Rectangle</p>
             </li>
             <li>
-              <img src="./img/Image_Frames_Ellipes.png" alt="" />
+              <img src="img\JUNE_mintingpage\Image_Frames_Ellipes.png" alt="" />
               <p>Ellipes</p>
             </li>
           </ul>
@@ -326,20 +326,20 @@
 
         <div class="Image_Types">
           <h3>Image Types</h3>
-          <div><img src="./img/imageType.png" alt=""></div>
+          <div><img src="img\JUNE_mintingpage\imageType.png" alt=""></div>
         </div>
 
         <div class="Background_Colors">
           <h3>Background Colors</h3>
           <div>
-            <img src="./img/Background_Colors.png" alt="">
+            <img src="img\JUNE_mintingpage\Background_Colors.png" alt="">
           </div>
         </div>
 
         <div class="Fonts">
           <h3>Fonts</h3>
           <div>
-            <img src="./img/Fonts.png" alt="">
+            <img src="img\JUNE_mintingpage\Fonts.png" alt="">
           </div>
         </div>
 
