--- a/mintingsam.html
+++ b/mintingsam.html
@@ -54,7 +54,7 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="./css/base.css" />
   <link rel="stylesheet" href="./css/grid.css" />
-  <link rel="stylesheet" href="./css/mintingInfo.css" />
+  <link rel="stylesheet" href="./css/mintingsam.css" />
   <link rel="stylesheet" href="./css/ScrollTrigger.css" />
   <script type="text/javascript" src="./js/base.js"></script>
   <script type="text/javascript" src="./js/ScrollTrigger.js"></script>
