--- a/mintingsam.html
+++ b/mintingsam.html
@@ -130,7 +130,7 @@
     <div class="Container">
       <div class="grid">
         <div>
-          <img src="img\AUGUST_mintingpage\banner2.jpg" alt="">
+          <img src="img\AUGUST_mintingpage\banner3.jpg" alt="">
           <div class="banner_bg"></div>
         </div>
         <!--<div class="textarea">
@@ -209,85 +209,28 @@
         </div>
 
         <div class="presale">
-          <h3>프리세일 혜택</h3>
+          <h3>구매자 혜택</h3>
           <div>
             <p>
-              주유청강 컬랙션 NFT를 구매하신 분에게는 주유청강 영인본을 보내드립니다.
+              혜택1. 주유청강 컬랙션 NFT를 구매하신 분에게는 주유청강 영인본을 보내드립니다.
             </p>
             <a href="https://youtu.be/hus-Lmvib4s" target="_blank"><예시- 단오풍정 영인본 영상></a>
+            <p>
+              혜택2. 주유청강 컬랙션 판매완료 2개월 뒤 이더리움 메인넷으로 동일NFT가 에어드롭 될 예정입니다.
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="cropImg" class="section1">
-    <div class="Container">
-      <div class="imgarea">
-        <ul id="masonry" class="masonry">
-          <div class="grid-sizer"></div>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002001.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002002.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002003.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/body/yb017002004.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002004.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002005.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/body/yb017002007.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002006.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002007.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003001.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003002.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/body/yb017002012.jpg" alt="" class="delay-3" /></li> -->
-
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003003.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003004.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003005.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/bust/yb017003006.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003006.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003007.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/bust/yb017003009.jpg" alt="" class="delay-3" /></li> -->
-          <!-- <li class="masonry-item"><img src="./img/crop/bust/yb017003010.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003008.jpg" alt="" class="delay-3" /></li>
-
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003009.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015004001.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/face/yb017006003.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015004002.jpg" alt="" class="delay-3" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/face/yb017006005.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015004003.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005001.jpg" alt="" class="delay-3" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/face/yb017006008.jpg" alt="" class="delay-3" /></li> -->
-
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005002.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005002.jpg" alt="" class="delay-3" /></li> -->
-          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005003.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005003.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005004.jpg" alt="" class="delay-3" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005006.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005005.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005006.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005009.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005007.jpg" alt="" class="delay-3" /></li>
-
-          <!-- <li class="masonry-item"><img src="./img/crop/object/yb017004005.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005008.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006001.jpg" alt="" class="" /></li>
-          <!-- <li class="masonry-item"><img src="./img/crop/object/yb017004007.jpg" alt="" class="delay-3" /></li> -->
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006002.jpg" alt="" class="delay-3" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006003.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006004.jpg" alt="" class="" /></li>
-          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006005.jpg" alt="" class="delay-3" /></li>
-
-        </ul>
-      </div>
-    </div>
-  </section>
+  
 
   <section id="NFTvariation" class="section2">
     <div class="Container">
       <div class="textarea grid">
         <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
-          Variation
+          NFT 유형
         </h2>
       </div>
 
@@ -405,6 +348,67 @@
     </div>
   </section>
 
+  <section id="cropImg" class="section1">
+    <div class="Container">
+      <div class="imgarea">
+        <ul id="masonry" class="masonry">
+          <div class="grid-sizer"></div>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002001.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002002.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002003.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/body/yb017002004.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002004.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002005.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/body/yb017002007.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002006.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015002007.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003001.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003002.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/body/yb017002012.jpg" alt="" class="delay-3" /></li> -->
+
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003003.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003004.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003005.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/bust/yb017003006.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003006.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003007.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/bust/yb017003009.jpg" alt="" class="delay-3" /></li> -->
+          <!-- <li class="masonry-item"><img src="./img/crop/bust/yb017003010.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003008.jpg" alt="" class="delay-3" /></li>
+
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015003009.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015004001.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/face/yb017006003.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015004002.jpg" alt="" class="delay-3" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/face/yb017006005.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015004003.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005001.jpg" alt="" class="delay-3" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/face/yb017006008.jpg" alt="" class="delay-3" /></li> -->
+
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005002.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005002.jpg" alt="" class="delay-3" /></li> -->
+          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005003.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005003.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005004.jpg" alt="" class="delay-3" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005006.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005005.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005006.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/head/yb017005009.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005007.jpg" alt="" class="delay-3" /></li>
+
+          <!-- <li class="masonry-item"><img src="./img/crop/object/yb017004005.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015005008.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006001.jpg" alt="" class="" /></li>
+          <!-- <li class="masonry-item"><img src="./img/crop/object/yb017004007.jpg" alt="" class="delay-3" /></li> -->
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006002.jpg" alt="" class="delay-3" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006003.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006004.jpg" alt="" class="" /></li>
+          <li class="masonry-item"><img src="img\AUGUST_mintingpage\yb015006005.jpg" alt="" class="delay-3" /></li>
+
+        </ul>
+      </div>
+    </div>
+  </section>
 
   <script type="text/javascript">
     $(document).ready(function(){
