--- a/mintingsam.html
+++ b/mintingsam.html
@@ -131,7 +131,7 @@
       <div class="grid">
         <div>
           <img src="img\AUGUST_mintingpage\banner3.jpg" alt="">
-          <div class="banner_bg"></div>
+          <!--<div class="banner_bg"></div>-->
         </div>
         <!--<div class="textarea">
           <p>혜원 전신첩 NFT Public Sale</p>
