--- a/mintingsam.html
+++ b/mintingsam.html
@@ -209,15 +209,21 @@
         </div>
 
         <div class="presale">
+          <div></div>
           <h3>구매자 혜택</h3>
-          <div>
-            <p>
-              혜택1. 주유청강 컬랙션 NFT를 구매하신 분에게는 주유청강 영인본을 보내드립니다.
-            </p>
-            <a href="https://youtu.be/hus-Lmvib4s" target="_blank"><예시- 단오풍정 영인본 영상></a>
-            <p>
-              혜택2. 주유청강 컬랙션 판매완료 2개월 뒤 이더리움 메인넷으로 동일NFT가 에어드롭 될 예정입니다.
-            </p>
+            <div>
+              <div>
+                <p>
+                혜택1. 주유청강 컬랙션 NFT를 구매하신 분에게는 주유청강 영인본을 보내드립니다.
+              </p>
+              <a href="https://youtu.be/hus-Lmvib4s" target="_blank"><예시- 단오풍정 영인본 영상></a>
+            </div>
+            <div>
+              <p>
+                혜택2. 주유청강 컬랙션 판매완료 2개월 뒤 이더리움 메인넷으로 동일NFT가 에어드롭 될 예정입니다.
+              </p>
+              <a href="https://opensea.io/collection/hyewons-album-of-genre-paintings" target="_blank"><예시- 이더리움 메인넷 상 단오풍정NFT></a>
+            </div>
           </div>
         </div>
       </div>
