--- a/mintingsam.html
+++ b/mintingsam.html
@@ -107,7 +107,7 @@
   </header>
 
   <aside id="sidebar" class="sidebar on"></aside>
-
+  <!--
   <section id="wallet_area" class="section5">
       <div  id="connect-btn" class="wallet_btn" style="display:none" >
         <button type="button" name="btn-wallet" id="btn-wallet" onclick="connectWallet()">
@@ -125,7 +125,7 @@
         <p id="net_info_msg">지갑의 네트워크를 Ethereum Mainnet으로 설정하세요.</p>
       </div>
   </section>
-
+-->
   <section id="mintpage_banner" class="section8">
     <div class="Container">
       <div class="grid">
@@ -190,7 +190,7 @@
                 </td>
               </tr>
               <tr>
-                <td colspan='2'>* 주유청강 컬랙션 판매완료 후 7일 이내 실제 NFT 이미지로 리빌됩니다.</td>
+                <td colspan='2'>* 주유청강 컬렉션 판매완료 후 7일 이내 실제 NFT 이미지로 리빌됩니다.</td>
               </tr>
             </tbody>
           </table>
@@ -214,13 +214,13 @@
             <div>
               <div>
                 <p>
-                혜택1. 주유청강 컬랙션 NFT를 구매하신 분에게는 주유청강 영인본을 보내드립니다.
+                혜택1. 주유청강 컬렉션 NFT를 구매하신 분에게는 주유청강 영인본을 보내드립니다.
               </p>
               <a href="https://youtu.be/hus-Lmvib4s" target="_blank"><예시- 단오풍정 영인본 영상></a>
             </div>
             <div>
               <p>
-                혜택2. 주유청강 컬랙션 판매완료 2개월 뒤 이더리움 메인넷으로 동일NFT가 에어드롭 될 예정입니다.
+                혜택2. 주유청강 컬렉션 판매완료 2개월 뒤 이더리움 메인넷으로 동일NFT가 에어드롭 될 예정입니다.
               </p>
               <a href="https://opensea.io/collection/hyewons-album-of-genre-paintings" target="_blank"><예시- 이더리움 메인넷 상 단오풍정NFT></a>
             </div>
@@ -272,12 +272,12 @@
             </li>
           </ul>
         </div>
-
+        <!--
         <div class="Image_Types">
           <h3>Image Types</h3>
           <div><img src="img\AUGUST_mintingpage\img_typ.png" alt=""></div>
         </div>
-
+      -->
         <div class="Background_Colors">
           <h3>Background Colors</h3>
           <div>
