Update mintingpage, banner

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <div id="btn-mintingInfo">
-          <a href="mintingInfo.html" target="_self">
+          <a href="mintingInfo_Hyewon.html" target="_self">
             NFT Mint
           </a>
         </div>
@@ -160,6 +160,13 @@
     <div id="popup">
       <div>
         <a href="address.html" target="_self"><img src="img\Pre_sale_benefits_en.jpg" alt=""></a>
+      </div>
+      <div class="popup_close"><div>&#215;</div></div>
+    </div>
+
+    <div id="popup2">
+      <div>
+        <a href="survey.html" target="_self"><img src="img\white_banner2.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
     </div>
