--- a/index_ko.html
+++ b/index_ko.html
@@ -99,7 +99,7 @@
           </div>
 
         <div id="btn-mintingInfo">
-          <a href="mintingInfo.html" target="_self">
+          <a href="mintingInfo_Hyewon.html" target="_self">
             NFT Mint
           </a>
         </div>
@@ -163,6 +163,13 @@
       </div>
       <div class="popup_close"><div>&#215;</div></div>
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
+    </div>
+
+    <div id="popup2">
+      <div>
+        <a href="survey.html" target="_self"><img src="img\white_banner2.jpg" alt=""></a>
+      </div>
+      <div class="popup_close"><div>&#215;</div></div>
     </div>
 
     <section id="Home" class="section1">
