--- a/index_ko.html
+++ b/index_ko.html
@@ -159,7 +159,7 @@
 
     <div id="popup">
       <div>
-        <a href="address.html" target="_self"><img src="img\Pre_sale_benefits_ko.jpg" alt=""></a>
+        <a href="address.html" target="_self"><img src="img\presale_bene_ko.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
