--- a/address_georli.html
+++ b/address_georli.html
@@ -153,6 +153,14 @@
               </div>
             </div>
 
+            <div style="font-size: 1.5rem; text-align: center;">
+              <p>“한국시간 2022년 8월7일 오전 10시 현재 NFT 보유자에 한해 그 이후 배송이 됩니다. </p>
+              <p>만일 그 전에 판매가 되어 보유자가 바뀐 경우, 이전 소유자에게는 배송되지 않습니다.”</p>
+
+              <p>“For oversea deliveries, there will be additional shipping charges.</p>
+              <p>You will get notified how to pay this shipping cost by email.”</p>
+            </div>
+
             <div class="no_nft" style="display:none;">
               <div id="currentAddress"></div>
               <p>이 주소는 혜원 전신첩 NFT를 보유하고 있지 않습니다.</p>
