survey and view user info 3

--- a/address.html
+++ b/address.html
@@ -301,7 +301,7 @@ However, if you do not agree, participation in the guerrilla event may be restri
                 <!-- <button id="modify">modify</button> -->
               </div>
               <div class="modal_content">
-                <form name="korea" class="modifyForm" id ="modify" style="display:block;">
+                <form name="korea" class="modifyForm" id ="modify" style="display:none;">
                   <div>
                     <p>받는 분</p>
                     <input type="text" id="m_userName" placeholder="이름" onfocus="this.placeholder=''" onblur="this.placeholder='이름'" value="">
