--- a/survey.html
+++ b/survey.html
@@ -201,7 +201,7 @@
                 <div>
                   <span class="btnArea">
                     <input type="reset" value="Reset" class="btn_reset">
-                    <button class="submitBtn">Submit</button>
+                    <button class="submitBtn" id="click_submit">Submit</button>
                   </span>
                 </div>
               </form>
@@ -251,11 +251,9 @@
 
           }
           else{
-            alert("개인정보 수집에 동의해주세요.");
           }
-          
-          console.log("click");
-          console.log("push test");
+          // console.log("click");
+          // console.log("push test");
       });
       
     </script>
