--- a/index_ko.html
+++ b/index_ko.html
@@ -165,12 +165,12 @@
       <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
     </div>
 
-    <div id="popup2">
+    <!-- <div id="popup2">
       <div>
         <a href="survey.html" target="_self"><img src="img\white_banner2.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
-    </div>
+    </div> -->
 
     <section id="Home" class="section1">
       <div class="Container">
