--- a/mintingInfo_Hyewon.html
+++ b/mintingInfo_Hyewon.html
@@ -160,8 +160,8 @@
           <table cellspacing="0" cellpadding="0">
             <tbody>
               <tr>
-                <td>시작시간</td>
-                <td>2022. 8월 판매예정</td>
+                <td>NFT 구매 방법</td>
+                <td><a href="https://www.topport.io/creator/0x50de9d1fc58bafd27d5d40d4b63662e72ce79dca" target="_blank" style="text-decoration: underline;">www.topport.io</a></td>
               </tr>
               <!---
               <tr>
@@ -170,12 +170,12 @@
               </tr>
             -->
               <tr>
-                <td>가격</td>
-                <td>개당 25만원 </td>
+                <td>NFT 판매 수량</td>
+                <td>1140개 (준비 수량 소진시 조기마감)</td>
               </tr>
               <tr>
-                <td>NFT 판매 수량</td>
-                <td>1140개</td>
+                <td>NFT 판매 가격</td>
+                <td>개당 25만원</td>
               </tr>
               <tr class="howMinting">
                 <td>Minting 방법</td>
