delete terms of sale

--- a/mintingInfo_Hyewon.html
+++ b/mintingInfo_Hyewon.html
@@ -348,11 +348,11 @@
 
   <div id="popup-minting"></div>
 
-  <section>
+  <!-- <section>
     <div class="nft_termsofsale">
       <a href="NFT_terms_of_sale_6.3.pdf" target="_blank">NFT 판매 약관</a>
     </div>
-  </section>
+  </section> -->
 
   <section id="cropImg" class="section1">
     <div class="Container">
