Update banner + nft sample

--- a/mintingInfo_Hyewon.html
+++ b/mintingInfo_Hyewon.html
@@ -130,7 +130,7 @@
     <div class="Container">
       <div class="grid">
         <div>
-          <img src="img\AUGUST_mintingpage\banner3.jpg" alt="">
+          <img src="img\AUGUST_mintingpage\banner4.jpg" alt="">
           <!--<div class="banner_bg"></div>-->
         </div>
         <!--<div class="textarea">
@@ -289,6 +289,13 @@
           <h3>Fonts</h3>
           <div>
             <img src="img\AUGUST_mintingpage\font.png" alt="">
+          </div>
+        </div>
+
+        <div class="Fonts">
+          <h3>NFT 미리보기 (일부 예시)</h3>
+          <div>
+            <img src="img\AUGUST_mintingpage\presale_image_list-selected.png" alt="">
           </div>
         </div>
 
