--- a/index_ko.html
+++ b/index_ko.html
@@ -157,13 +157,12 @@
       </ol>
     </nav>
 
-    <div id="popup">
+    <!-- <div id="popup">
       <div>
         <a href="address.html" target="_self"><img src="img\presale_bene_ko.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
-      <!-- <div class="close"><button type="toggle" name="close_btn"></button>&#215;</div> -->
-    </div>
+    </div> -->
 
     <!-- <div id="popup2">
       <div>
