--- a/KMM_Chapter1.html
+++ b/KMM_Chapter1.html
@@ -26,7 +26,7 @@
 
     <section class="subpage">
       <div class="Container">
-        <div class="textarea grid">\
+        <div class="textarea grid">
           <h3 class="subtitle">KMM Chapter1. RED GATE to the 18세기 혜원신윤복</h3>
         </div>
 
