--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <!-- <div id="popup">
       <div>
-        <a href="KMM_Chapter1.html" target="_self"><img src="img\KMM_Chapter1\kmm_banner.jpg" alt=""></a>
+        <a href="KMM_Chapter1.html" target="_self"><img src="img\KMM_Chapter1\kmm_banner640.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
     </div> -->
