--- a/KMM_Chapter1.html
+++ b/KMM_Chapter1.html
@@ -134,7 +134,7 @@
         </div>
 
         <div class="textarea grid">
-          <h4>ZZONE6. 다시 현실로</h4>
+          <h4>ZONE6. 다시 현실로</h4>
           <p>
             KMM은 간송미술관이 보유한 문화재들 중 혜원 신윤복의 혜원전신첩을 디지털로 복원함으로써 프로젝트의 첫 발을 내딛었습니다. KMM은 이번 전시 이후 현대 작가들이 혜원 신윤복 화백에 대한 존경을 담아 혜원전신첩을 재해석한 작품들을 선보이게 됩니다. 앞으로의 KMM의 행보를 보여드리고자 홀로그램스 바인드와 협업하고 LG 디스플레이의 LED TV를 협찬받아 인터랙티브한 전시 공간을 구성했습니다. 과거와 현재가 어우러진 새로운 형태의 창작물들을 생산하고, 더 나아가 문화재가 트렌드가 되는 New Culture Paradigm을 만들어낼 수 있도록 여러분의 많은 관심과 응원 부탁드립니다.
           </p>
