--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
       </ol>
     </nav>
 
-    <!-- <div id="popup">
+    <div id="popup">
       <div>
-        <a href="KMM_Chapter1.html" target="_self"><img src="img\KMM_Chapter1\kmm_banner640.jpg" alt=""></a>
+        <a href="KMM_Chapter1.html" target="_self"><img src="img\KMM_Chapter1\kmm_banner2.jpg" alt=""></a>
       </div>
       <div class="popup_close"><div>&#215;</div></div>
-    </div> -->
+    </div>
 
     <!-- <div id="popup2">
       <div>
