--- a/mintingInfo_Hyewon.html
+++ b/mintingInfo_Hyewon.html
@@ -130,7 +130,7 @@
     <div class="Container">
       <div class="grid">
         <div>
-          <img src="img\AUGUST_mintingpage\banner4.jpg" alt="">
+          <img src="img\AUGUST_mintingpage\mainbanner(1000)4.jpg" alt="">
           <!--<div class="banner_bg"></div>-->
         </div>
         <!--<div class="textarea">
@@ -159,39 +159,7 @@
         <div>
           <table cellspacing="0" cellpadding="0">
             <tbody>
-              <tr>
-                <td>NFT 구매 방법</td>
-                <td><a href="https://www.topport.io/creator/0x50de9d1fc58bafd27d5d40d4b63662e72ce79dca" target="_blank" style="text-decoration: underline;">www.topport.io</a></td>
-              </tr>
-              <!---
-              <tr>
-                <td>네트워크</td>
-                <td>Ethereum Mainnet</td>
-              </tr>
-            -->
-              <tr>
-                <td>NFT 판매 수량</td>
-                <td>1140개 (준비 수량 소진시 조기마감)</td>
-              </tr>
-              <tr>
-                <td>NFT 판매 가격</td>
-                <td>개당 25만원</td>
-              </tr>
-              <tr class="howMinting">
-                <td>Minting 방법</td>
-                <td><a class="tooltip_event" href="#" title="랜덤 민팅이란?
-
-                    구매자는 민팅 직후에는 어떤 NFT이미지를 소유하게 될 지 알 수 없습니다.
-                    판매 종료 이후 최대 7일 이내에 랜덤 방식으로 본인소유의 NFT 이미지가 확정됩니다. 
-                    확정 이전에는 해당 NFT마켓플레이스에 데모이미지가 보여지나 이후에는 구매자 소유의 NFT이미지가 정상적으로 보여집니다.
-                    ">
-                  Random Minting
-                  <img src="./img/icon-question.png" alt="" ></a>
-                </td>
-              </tr>
-              <tr>
-                <td colspan='2'>* 주유청강 컬렉션 판매완료 후 7일 이내 실제 NFT 이미지로 리빌됩니다.</td>
-              </tr>
+                <a href="https://www.topport.io/creator/0x50de9d1fc58bafd27d5d40d4b63662e72ce79dca" target="_blank" style="font-size: larger; text-decoration: underline; text-align: center; font-weight: bold;">구매하러가기</a>
             </tbody>
           </table>
           <!--<div class="progress_container" id="progress_container"></div>-->
@@ -200,15 +168,15 @@
           <p >혜원 전신첩 NFT는 가스비 절감을 위해 ERC721A(https://www.azuki.com/erc721a)를 기반으로 해서 제작되었습니다.<br> 한 번에 다수의 NFT를 민팅하는 가스비가 1개 민팅 비용과 크게 차이가 나지 않습니다. 따라서 한 번에 여러개의 NFT를 민팅하면 가스비 절감에 많은 도움이 됩니다.</p>
         </div>-->
 
-        <div style="display:none">
+        <!-- <div style="display:none">
             <a
             class="go_mint_guide"
               target="_blank"
               href="./guide/mintingguide.html"
               >민팅 가이드 보기</a>
-        </div>
+        </div> -->
 
-        <div class="presale">
+        <!-- <div class="presale">
           <div></div>
           <h3>구매자 혜택</h3>
             <div>
@@ -225,7 +193,7 @@
               <a href="https://opensea.io/collection/hyewons-album-of-genre-paintings" target="_blank"><예시- 이더리움 메인넷 상 단오풍정NFT></a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -235,13 +203,50 @@
   <section id="NFTvariation" class="section2">
     <div class="Container">
       <div class="textarea grid">
-        <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
+        <!-- <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
           NFT 유형
+        </h2> -->
+        <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">
+          구매자 혜택
         </h2>
       </div>
 
       <div class="imgarea grid">
-        <div class="Image_Crop_Types">
+        <div class="Background_Colors">
+          <img src="img\AUGUST_mintingpage\bene1.png" alt="" />
+        </div>
+
+        <div class="Background_Colors">
+          <h3>KMM 뷰잉데이</h3>
+          <div>
+            <img src="img\AUGUST_mintingpage\bene2.jpg" alt="">
+            <p style="font-size: larger;">
+              매 달 혜원전신첩의 30개의 컬랙션 중 하나의 컬렉션을 주제로 KMM뷰잉데이(가칭)를 진행할 예정입니다. KMM뷰잉데이에는 그 달의 컬랙션의 NFT를 소유한 사람만이 뷰잉데이를 신청할 수 있으며, 실물로 보기 어려운 신윤복의 혜원전신첩의 그림을 직접 볼 수 있습니다.
+            </p>
+            <p>* 2023년 이후부터 진행예정</p>
+          </div>
+        </div>
+
+        <div class="Background_Colors">
+          <h3>영인본 제공</h3>
+          <div>
+            <img src="img\AUGUST_mintingpage\bene3.jpg" alt="">
+            <p style="font-size: larger;">실물의 그림과 최대한 비슷한 최상의 상태의 영인본을 보내드립니다.</p>
+            <p style="font-size: larger;">구매하신 컬랙션의 그림의 영인본을 보내드리며, 실물의 감동을 집에서도 느낄 수 있도록 제작하였습니다.</p>
+            <p>* Multi shot, Full body shot, Bust shot 구매자에게만 제공</p>
+          </div>
+        </div>
+
+        <div class="Background_Colors">
+          <h3>이더리움 메인넷 에어드롭</h3>
+          <div>
+            <img src="img\AUGUST_mintingpage\bene4.jpg" alt="">
+            <p style="font-size: larger;">이더리움 메인넷에서도 구매하신 동일한 NFT를 에어드롭해드립니다. 이더리움을 기반으로 하는 자신의 개인지갑에서도 NFT를 소유하실 수 있습니다.</p>
+            <p>* Multi shot, Full body shot 구매자에게만 제공</p>
+          </div>
+        </div>
+
+        <!-- <div class="Image_Crop_Types">
           <h3>Image Crop Types</h3>
           <ul class="grid">
             <li>
@@ -257,9 +262,9 @@
               <p>Horizontal</p>
             </li>
           </ul>
-        </div>
+        </div> -->
 
-        <div class="Image_Frames">
+        <!-- <div class="Image_Frames">
           <h3>Image Frames</h3>
           <ul class="grid">
             <li>
@@ -271,14 +276,16 @@
               <p>Ellipes</p>
             </li>
           </ul>
-        </div>
+        </div> -->
+
         <!--
         <div class="Image_Types">
           <h3>Image Types</h3>
           <div><img src="img\AUGUST_mintingpage\img_typ.png" alt=""></div>
         </div>
       -->
-        <div class="Background_Colors">
+
+        <!-- <div class="Background_Colors">
           <h3>Background Colors</h3>
           <div>
             <img src="img\AUGUST_mintingpage\back.png" alt="">
@@ -297,7 +304,7 @@
           <div>
             <img src="img\AUGUST_mintingpage\presale_image_list-selected.png" alt="">
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
