--- a/mintingInfo_Hyewon.html
+++ b/mintingInfo_Hyewon.html
@@ -221,7 +221,7 @@
           <div>
             <img src="img\AUGUST_mintingpage\bene2.jpg" alt="">
             <p style="font-size: larger;">
-              매 달 혜원전신첩의 30개의 컬랙션 중 하나의 컬렉션을 주제로 KMM뷰잉데이(가칭)를 진행할 예정입니다. KMM뷰잉데이에는 그 달의 컬랙션의 NFT를 소유한 사람만이 뷰잉데이를 신청할 수 있으며, 실물로 보기 어려운 신윤복의 혜원전신첩의 그림을 직접 볼 수 있습니다.
+              매 달 혜원전신첩의 30개의 컬랙션 중 하나의 컬렉션을 주제로 KMM뷰잉데이(가칭)를 진행할 예정입니다. 그 달의 컬랙션의 NFT를 소유한 사람만이 뷰잉데이를 신청할 수 있으며, 실물로 보기 어려운 신윤복의 혜원전신첩의 그림을 직접 볼 수 있습니다.
             </p>
             <p>* 2023년 이후부터 진행예정</p>
           </div>
