--- a/img/listpage.html
+++ b/img/listpage.html
@@ -251,7 +251,7 @@
               <li>
                   <p class="imgCount">No.28</p>
                   <div class="imgArea"><img src="../img/introduction/028.jpg"></div>
-                  <p class="eName">Venturing our after curfew</p>
+                  <p class="eName">Venturing out after curfew</p>
                   <p class="kName">야금모행</p>
                   <p class="cName">夜禁冒行</p>
                   <p class="linkBtn"><img src="../img/iocn-plus.svg" alt=""></p>
