--- a/lovers-under-the-moon/background.html
+++ b/lovers-under-the-moon/background.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>달아래 정인 | Background</title>
-    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <link rel="icon" type="image/png" href="./favicon.ico" />
+    <script src="./js/jquery-3.6.0.min.js"></script>
 
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/background.css">
