--- a/lovers-under-the-moon/character_detail.html
+++ b/lovers-under-the-moon/character_detail.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <title>달아래 정인 | Character</title>
+    <link rel="icon" type="image/png" href="./favicon.ico" />
+    <script src="./js/jquery-3.6.0.min.js"></script>
 
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/character.css">
