--- a/lovers-under-the-moon/index.html
+++ b/lovers-under-the-moon/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>월하정인</title>
+    <title>달아래 정인</title>
     <link rel="icon" type="image/png" href="./favicon.ico" />
     <script src="./js/jquery-3.6.0.min.js"></script>
 
