-. Lovers under the moon : change benefit

--- a/lovers-under-the-moon/benefit.html
+++ b/lovers-under-the-moon/benefit.html
@@ -39,7 +39,7 @@
           <div>
             <div class="divTableCell divTable_title">
               간송후원회 회원 등록
-              <span class="text_caption">(보국Ⅱ 회원 1년 권)</span>
+              <span class="text_caption">(보국Ⅱ 회원 1년 권 -   12만원 상당)</span>
             </div>
             <div class="divTableCell divTable_contents">
               <ul>
@@ -56,7 +56,7 @@
             <div class="divTableCell divTable_title">멤버십NFT</div>
             <div class="divTableCell divTable_contents">
               <ul>
-                <li>∙ 간송 전용 커뮤니케이션 참여 : Bemyfriends </li>
+                <li>∙ 간송 전용 커뮤니케이션 참여</li>
                 <li>∙ KMM에서 진행하는 프로그램 선예매 서비스 제공</li>
                 <li>∙ 나만의 PFP 조합해서 구매가능 </li>
                 <li>∙ KMM 굿즈 30% 할인 </li>
